# coverage

./: README.md  coverage.axl  runnable.axl
.github/workflows/: ci.yaml
example/: MODULE.bazel  README.md  requirements.txt
example/.aspect/: coverage.axl
example/src/: BUILD  my_test.py
